SalesForce/src/objects/LangTranslation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Ch__c</fullName>
        <label>Ch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eng__c</fullName>
        <label>Eng</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>LangTranslation</label>
</CustomObject>